# state-recovery-backtrack

./: .gitignore  README.md
cpp/: README.md
cpp/rc4/: CMakeLists.txt  RC4.cpp  RC4.hpp  State.cpp  State.hpp  Stats.cpp  Stats.hpp  assert.h  backtrack.cpp  backtrack.hpp  backtrack_change.cpp  common.cpp  common.h  main.cpp  test.cpp
cpp/spritz/: CMakeLists.txt  Spritz.cpp  Spritz.hpp  State.cpp  State.hpp  Stats.cpp  backtrack.cpp  backtrack.hpp  backtrack_special.cpp  common.cpp  common.h  main.cpp
python/: README.md  backtrack.py  benchmark.py  cli.py  generate.py  print_stats.py  states.py  stats.py
python/rc4/: cipher.py
python/spritz/: cipher.py  spritz.py  tests.py
